--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql
+  adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: bsale_test
@@ -49,5 +49,8 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
+  adapter: mysql2
+  username: bsale_test
+  password: bsale_test
+  host: mdb-test.c6vunyturrl6.us-west-1.rds.amazonaws.com
   database: bsale_test
